# injector_controller

./: CMakeLists.txt
include/: PROJECT_CONFIGURATION.h
libs/modbus/: CMakeLists.txt
libs/modbus/inc/: mb_config.h  modbus_client.h
libs/modbus/src/: CMakeLists.txt  modbus_client.c
libs/modbus/test/: CMakeLists.txt  modbus_test.cpp  test_mb_client.cpp
libs/redis/: CMakeLists.txt
libs/redis/inc/: base.h  publisher.h  redis_client.h  subscriber.h
libs/redis/src/: CMakeLists.txt  base.c  publisher.c  redis_client.c  subscriber.c
libs/redis/test/: CMakeLists.txt  fixtures.cpp  fixtures.h  test_base.cpp  test_client.cpp  test_consumer.cpp  test_publisher.cpp
nodes/modbus_device/src/modbus_device/: bootstrap.py  config.py
nodes/modbus_device/src/modbus_device/adapters/: mongodb_orm.py  redis_eventpublisher.py  repository.py
nodes/modbus_device/src/modbus_device/domain/: commands.py  events.py  exceptions.py  model.py
nodes/modbus_device/src/modbus_device/entrypoints/: redis_pubsub.py  redis_subscriber.py
nodes/modbus_device/src/modbus_device/entrypoints/api/: api.py  schema.py
nodes/modbus_device/src/modbus_device/entrypoints/dash_app/: __init__.py  app.py  runner.py
nodes/modbus_device/src/modbus_device/entrypoints/dash_app/pages/: index.py  side_bar.py
nodes/modbus_device/src/modbus_device/entrypoints/dash_app/pages/data_model/: callbacks.py  create.py  index.py  top_bar.py
nodes/modbus_device/src/modbus_device/service_layer/: handlers.py  messagebus.py  unit_of_work.py
nodes/modbus_device/test/e2e/: fake_service.py  test_api.py
nodes/modbus_device/test/unit/: test_handlers.py  test_redis_publisher.py  test_redis_subscriber.py  test_table.py
nodes/plotter_node/: requirements.txt
nodes/plotter_node/src/plotter_node/: dash_app.py  main.py  pubsub.py
nodes/rs485_interface/: CMakeLists.txt  Dockerfile
nodes/rs485_interface/inc/: adapters.h  app.h  config.h  handlers.h
nodes/rs485_interface/inc/context_manager/: context_manager.h
nodes/rs485_interface/inc/modbus/: modbus_client.h
nodes/rs485_interface/inc/redis/: base.h  consumer.h  publisher.h  redis_client.h
nodes/rs485_interface/inc/service_layer/: adapters.h  handlers.h
nodes/rs485_interface/src/: CMakeLists.txt  adapters.c  app.c  handlers.c  main.c
nodes/rs485_interface/src/modbus/: CMakeLists.txt  modbus_client.c
nodes/rs485_interface/src/redis/: CMakeLists.txt  base.c  consumer.c  publisher.c  redis_client.c
nodes/rs485_interface/src/service_layer/: CMakeLists.txt  adapters.c  app.c  handlers.c
nodes/rs485_interface/test/: CMakeLists.txt  fixtures.cpp  fixtures.h  test_adapters.cpp  test_handlers.cpp
nodes/rs485_interface/test/modbus/: test_mb_client.cpp
nodes/rs485_interface/test/redis/: test_base.cpp  test_client.cpp  test_consumer.cpp  test_publisher.cpp
nodes/rs485_interface/test/service_layer/: test_app.cpp  test_handlers.cpp
